src/test/ui/proc-macro/more-gates.stderr
error[E0658]: procedural macros cannot expand to macro definitions
  --> $DIR/more-gates.rs:9:1
   |
LL | #[attr2mac1]
   | ^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/54727
   = help: add #![feature(proc_macro_hygiene)] to the crate attributes to enable

error[E0658]: procedural macros cannot expand to macro definitions
  --> $DIR/more-gates.rs:12:1
   |
LL | #[attr2mac2]
   | ^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/54727
   = help: add #![feature(proc_macro_hygiene)] to the crate attributes to enable

error[E0658]: procedural macros cannot expand to macro definitions
  --> $DIR/more-gates.rs:16:1
   |
LL | mac2mac1!();
   | ^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/54727
   = help: add #![feature(proc_macro_hygiene)] to the crate attributes to enable

error[E0658]: procedural macros cannot expand to macro definitions
  --> $DIR/more-gates.rs:17:1
   |
LL | mac2mac2!();
   | ^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/54727
   = help: add #![feature(proc_macro_hygiene)] to the crate attributes to enable

error[E0658]: procedural macros cannot expand to macro definitions
  --> $DIR/more-gates.rs:19:1
   |
LL | tricky!();
   | ^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/54727
   = help: add #![feature(proc_macro_hygiene)] to the crate attributes to enable

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0658`.
